# sprint_10_notifications

./: .flake8  README.md  pyproject.toml
auth-service/: README.md
auth-service/auth/: Dockerfile  docker-entrypoint.sh  pyproject.toml
auth-service/auth/alembic/: env.py
auth-service/auth/alembic/versions/: 01_initial_migration.py  02_add_service_and_m2m_connection_with_.py  03_add_timezone_and_notifications_flag_e5364c11616c_.py
auth-service/auth/src/: main.py
auth-service/auth/src/api/v1/: routers.py  validators.py
auth-service/auth/src/commands/: __init__.py  createsuperuser.py
auth-service/auth/src/core/: config.py  exceptions.py  tokens.py  utils.py
auth-service/auth/src/crud/: __init__.py  access_history.py  base.py  permissions.py  role_permission.py  roles.py  service.py  user_role.py  user_service.py  users.py
auth-service/auth/src/db/: base.py  postgres.py  redis.py
auth-service/auth/src/db_models/: __init__.py  access_history.py  base_models.py  permission.py  role.py  role_permission.py  service.py  user.py  user_role.py  user_service.py
auth-service/auth/src/jwt/: __init__.py  exceptions.py  jwt.py
auth-service/auth/src/schemas/: access_history.py  oauth.py  permission.py  role.py  role_permission.py  user.py  user_role.py
auth-service/auth/src/services/: oauth.py  view.py
auth-service/tests/: pyproject.toml
auth-service/tests/functional/: conftest.py  pytest.ini  settings.py
auth-service/tests/functional/plugins/fixtures/: aiohttp_fixtures.py  auth_requests.py  db_fixtures.py  permission_requests.py  role_requests.py  url_fixtures.py
auth-service/tests/functional/src/: test_auth.py  test_permissions.py  test_roles.py  test_rpm_limit.py  test_user.py  test_users.py
auth-service/tests/functional/testdata/: test_data.py
auth-service/tests/functional/utils/: generate_test_data.py  jwt.py
movies-service/movies/: Dockerfile  docker-entrypoint.sh  pyproject.toml
movies-service/movies/src/: main.py
movies-service/movies/src/api/v1/: routers.py
movies-service/movies/src/core/: config.py  logger.py  query.py  utils.py
movies-service/movies/src/db/: base.py  elastic.py  redis.py
movies-service/movies/src/jwt/: exceptions.py  jwt.py  permissions.py
movies-service/movies/src/models/: __init__.py  film.py  genre.py  mixins.py  person.py
movies-service/movies/src/services/: collection.py  detail.py  view.py
notifications-service/admin-panel/: pyproject.toml  uwsgi.ini
notifications-service/admin-panel/config/: settings.py  urls.py
notifications-service/admin-panel/notification/: admin.py  apps.py  datasource.py  forms.py  logger.py  mock_users_queryset.py  models.py  settings.py  urls.py  utils.py  validators.py  views.py
notifications-service/admin-panel/notification/migrations/: 0001_initial.py
notifications-service/admin-panel/notification/templates/: base.html  schedule.html  send.html
notifications-service/admin-panel/notification/templates/includes/: form.html
notifications-service/publisher/: .env.example  Dockerfile.celery  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint-celery.sh  docker-entrypoint.sh  main.py  pyproject.toml
notifications-service/publisher/publisher/: app.py
notifications-service/publisher/publisher/utils/: uuid.py
notifications-service/publisher/tests/functional/: conftest.py  test_publisher.py
notifications-service/workers/: Dockerfile  mail.html  main.py  pyproject.toml  rabbit_producer.py
notifications-service/workers/data/: movies.py  templates.py  users.py
notifications-service/workers/data/json/: movies.json  templates.json  users.json
notifications-service/workers/utils/: dto.py  mapping.py  sender.py
ugc-service/ugc/: Dockerfile  docker-entrypoint.sh  pyproject.toml
ugc-service/ugc/src/: main.py
ugc-service/ugc/src/core/: config.py
ugc-service/ugc/src/db/: mongo_base.py
ugc-service/ugc/src/jwt/: __init__.py
ugc-service/ugc/src/schemas/: __init__.py  review.py
ugc-service/ugc/src/services/: base.py  bookmarks_storage.py  broker.py  pagination.py  progress_storage.py  rating_storage.py  reviews_storage.py
ugc-service/ugc/src/utils/: exceptions.py
(+128 files in other folders)
