[tool.poetry]
name = "AuthService"
description = ""
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
pydantic = "^1.10.8"
sqlalchemy = "1.4.29"
python-dotenv = "^1.0.0"
redis = "^4.5.5"
orjson = "^3.9.0"
uvicorn = "^0.22.0"
gunicorn = "20.1.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
alembic = "1.7.7"
email-validator = "^2.0.0.post2"
aiohttp = "^3.8.4"
greenlet = "^2.0.2"
slowapi = "^0.1.8"
async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
