[tool.poetry]
name = "AuthService sprint6"
description = ""
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
pydantic = "^1.10.8"
sqlalchemy = "1.4.29"
python-dotenv = "^1.0.0"
redis = "^4.5.5"
orjson = "^3.9.0"
uvicorn = "^0.22.0"
gunicorn = "20.1.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
email-validator = "^2.0.0.post2"
async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}

[tool.poetry.group.test.dependencies]
aiohttp = "^3.8.4"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
asyncpg = "^0.27.0"
faker = "^18.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
