[tool.poetry]
name = "fastapi-solution"
description = "API для elasticsearch"
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
redis = "4.4.2"
elasticsearch = {version = "7.9.1", extras = ["async"]}
orjson = "3.8.13"
pydantic = "^1.10.7"
uvloop = "0.17.0"
gunicorn = "^20.1.0"
fastapi = "0.95.2"
uvicorn = "^0.22.0"
async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
